--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -282,7 +282,7 @@ input, select, textarea {
 	hr {
 		border: 0;
 		border-bottom: solid 1px rgba(160, 160, 160, 0.3);
-		margin: 2em 0;
+		margin: 0em 0;
 	}
 
 		hr.major {
@@ -3329,7 +3329,7 @@ input, select, textarea {
 		margin: 0 auto;
 		max-width: 100%;
 		opacity: 1;
-		padding: 4.5em;
+		padding: 1em 4.5em 0em 4.5em !important;
 		width: 90em;
 	}
 
@@ -3386,8 +3386,8 @@ input, select, textarea {
 
 		#sidebar > * {
 			border-top: solid 1px rgba(160, 160, 160, 0.3);
-			margin: 3em 0 0 0;
-			padding: 3em 0 0 0;
+			margin: 0em 0 0 0;
+			padding: 2em 0 0 0;
 		}
 
 		#sidebar > :first-child {
@@ -3414,38 +3414,25 @@ input, select, textarea {
 	#intro .logo {
 		border-bottom: 0;
 		display: inline-block;
-		margin: 0 0 1em 0;
-		overflow: hidden;
+		margin: 0 0 0 0;
 		position: relative;
-		width: 4em;
 	}
 
-		#intro .logo:before {
-			background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100px' height='100px' viewBox='0 0 100 100' preserveAspectRatio='none' zoomAndPan='disable'%3E%3Cpolygon points='0,0 100,0 100,25 50,0 0,25' style='fill:%23f4f4f4' /%3E%3Cpolygon points='0,100 100,100 100,75 50,100 0,75' style='fill:%23f4f4f4' /%3E%3C/svg%3E");
-			background-position: top left;
-			background-repeat: no-repeat;
-			background-size: 100% 100%;
-			content: '';
-			display: block;
-			height: 100%;
-			left: 0;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
-
-		#intro .logo img {
-			display: block;
-			margin-left: -0.25em;
-			width: 4.5em;
-		}
+	#intro .logo img {
+		display: block;
+		margin-left: -0.25em;
+		width: 10em;
+	}
 
 	#intro header h2 {
 		font-size: 2em;
 		font-weight: 900;
+		margin: 0;
+		padding: 0;
 	}
 
 	#intro header p {
+		margin: 0.25em 0 0; 
 		font-size: 0.8em;
 	}
 
