--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -206,7 +206,7 @@ input, select, textarea {
 		color: #3c3b3b;
 		font-family: "Raleway", Helvetica, sans-serif;
 		font-weight: 800;
-		letter-spacing: 0.25em;
+		letter-spacing: 0.05em;
 		line-height: 1.65;
 		margin: 0 0 1em 0;
 		text-transform: uppercase;
@@ -2558,8 +2558,8 @@ input, select, textarea {
 
 		ul.posts li {
 			border-top: dotted 1px rgba(160, 160, 160, 0.3);
-			margin: 1.5em 0 0 0;
-			padding: 1.5em 0 0 0;
+			margin: 2em 0 0 0;
+			padding: 2em 0 0 0;
 		}
 
 			ul.posts li:first-child {
@@ -2603,7 +2603,7 @@ input, select, textarea {
 			}
 
 				ul.posts article header h3 {
-					font-size: 0.7em;
+					font-size: 1.2em;
 					margin-top: 0.125em;
 				}
 
@@ -2621,114 +2621,6 @@ input, select, textarea {
 					margin-bottom: 0;
 				}
 
-/* Mini Post */
-
-	.mini-post {
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
-		display: flex;
-		-moz-flex-direction: column-reverse;
-		-webkit-flex-direction: column-reverse;
-		-ms-flex-direction: column-reverse;
-		flex-direction: column-reverse;
-		background: #ffffff;
-		border: solid 1px rgba(160, 160, 160, 0.3);
-		margin: 0 0 2em 0;
-	}
-
-		.mini-post .image {
-			overflow: hidden;
-			width: 100%;
-		}
-
-			.mini-post .image img {
-				-moz-transition: -moz-transform 0.2s ease-out;
-				-webkit-transition: -webkit-transform 0.2s ease-out;
-				-ms-transition: -ms-transform 0.2s ease-out;
-				transition: transform 0.2s ease-out;
-				width: 100%;
-			}
-
-			.mini-post .image:hover img {
-				-moz-transform: scale(1.05);
-				-webkit-transform: scale(1.05);
-				-ms-transform: scale(1.05);
-				transform: scale(1.05);
-			}
-
-		.mini-post header {
-			padding: 1.25em 4.25em 0.1em 1.25em ;
-			min-height: 4em;
-			position: relative;
-			-moz-flex-grow: 1;
-			-webkit-flex-grow: 1;
-			-ms-flex-grow: 1;
-			flex-grow: 1;
-		}
-
-			.mini-post header h3 {
-				font-size: 0.7em;
-			}
-
-			.mini-post header .published {
-				display: block;
-				font-family: "Raleway", Helvetica, sans-serif;
-				font-size: 0.6em;
-				font-weight: 400;
-				letter-spacing: 0.25em;
-				margin: -0.625em 0 1.7em 0;
-				text-transform: uppercase;
-			}
-
-			.mini-post header .author {
-				position: absolute;
-				right: 2em;
-				top: 2em;
-			}
-
-	.mini-posts {
-		margin: 0 0 2em 0;
-	}
-
-		@media screen and (max-width: 1280px) {
-
-			.mini-posts {
-				display: -moz-flex;
-				display: -webkit-flex;
-				display: -ms-flex;
-				display: flex;
-				-moz-flex-wrap: wrap;
-				-webkit-flex-wrap: wrap;
-				-ms-flex-wrap: wrap;
-				flex-wrap: wrap;
-				width: calc(100% + 2em);
-			}
-
-				.mini-posts > * {
-					margin: 2em 2em 0 0;
-					width: calc(50% - 2em);
-				}
-
-				.mini-posts > :nth-child(-n + 2) {
-					margin-top: 0;
-				}
-
-		}
-
-		@media screen and (max-width: 480px) {
-
-			.mini-posts {
-				display: block;
-				width: 100%;
-			}
-
-				.mini-posts > * {
-					margin: 0 0 2em 0;
-					width: 100%;
-				}
-
-		}
 
 /* Post */
 
@@ -2875,6 +2767,7 @@ input, select, textarea {
 				border-right: 0;
 				left: -3em;
 				width: calc(100% + (3em * 2));
+				margin-bottom: 1em;
 			}
 
 				.post > header {
@@ -3379,6 +3272,7 @@ input, select, textarea {
 /* Sidebar */
 
 	#sidebar {
+		margin-top: 0em;
 		margin-right: 3em;
 		min-width: 22em;
 		width: 22em;
@@ -3400,7 +3294,7 @@ input, select, textarea {
 
 			#sidebar {
 				border-top: solid 1px rgba(160, 160, 160, 0.3);
-				margin: 3em 0 0 0;
+				margin: -2em 0 0 0;
 				min-width: 0;
 				padding: 3em 0 0 0;
 				width: 100%;
